# Sflex

./: README.md
computenode_slurmcode/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
computenode_slurmcode/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
computenode_slurmcode/auxdir/: Makefile  Makefile.in
computenode_slurmcode/contribs/: Makefile  Makefile.in
computenode_slurmcode/contribs/cray/: Makefile  Makefile.in
computenode_slurmcode/contribs/lua/: Makefile  Makefile.in
computenode_slurmcode/contribs/nss_slurm/: Makefile  Makefile.in  libnss_slurm.la  libnss_slurm.lo
computenode_slurmcode/contribs/openlava/: Makefile  Makefile.in
computenode_slurmcode/contribs/pam/: Makefile  Makefile.in  pam_slurm.lo
computenode_slurmcode/contribs/pam_slurm_adopt/: Makefile  Makefile.in  helper.lo  (+2 more)
computenode_slurmcode/doc/: Makefile  Makefile.in
computenode_slurmcode/etc/: Makefile  Makefile.in  init.d.slurm  init.d.slurmdbd  slurmdbd.service
computenode_slurmcode/slurm/: slurm_version.h
computenode_slurmcode/src/: Makefile  Makefile.in
computenode_slurmcode/testsuite/: Makefile  Makefile.in  testsuite.conf.sample
config_files/: controller.conf  slurm.conf
controller_slurmcode/: configure  configure.ac  configure.ac~
controller_slurmcode/slurm/: slurm.h
controller_slurmcode/src/plugins/sched/sflex/: Makefile.am  Makefile.in  sflex.c  sflex.h  sflex_wrapper.c
controller_slurmcode/src/plugins/select/cons_sflex/: Makefile.am  Makefile.in  select_cons_sflex.c  select_cons_sflex.h
(+1836 files in other folders)
